# advent-of-code

./: .gitignore  README.md
2021/: README.md  pyproject.toml
2021/01/: main.py
2021/02/: main.py
2021/06/: main.py
2021/07/: main.py
2021/08/: main.py
2021/09/: main.py
2021/10/: main.py
2021/11/: main.py
2021/12/: main.py
2021/13/: main.py
2021/14/: main.py
2021/15/: main.py
2021/16/: main.py
2021/17/: main.py
2021/18/: main.py
2021/3/: main.py
2021/4/: main.py
2021/5/: main.py
2021/6/: main.py
2021/7/: main.py
2022/day01/src/: a.rs  b.rs  common.rs  main.rs
2022/day02/src/: main.rs
2022/day03/: Cargo.toml
2022/day03/src/: main.rs
2022/day04/src/: main.rs
2022/day05/src/: main.rs
2022/day06/: Cargo.toml
2022/day06/src/: main.rs
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: _main.rs  main.rs
