[tool.poetry]
name = "AOC 2021"
version = "0.1.0"
description = "My attempt at Advent of Code 2021."
authors = ["Metin San <metinisan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
